--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,14 @@ language: rust
 
 rust:
   - stable
-  - beta
   - nightly
-  - 1.22.0
 
-cache: cargo
+install:
+  - cargo build --all-features --tests --examples
+  - >
+    if [[ $TRAVIS_RUST_VERSION == "nightly" ]]; then
+        cargo build --all-features --benches
+    fi
 
 script:
-  - cargo build --verbose --all-features
-  - cargo test --verbose --all-features
-
-matrix:
-  allow_failures:
-    - rust: nightly
+  - cargo test --all-features
