--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@
 # When uploading crates to the registry Cargo will automatically
 # "normalize" Cargo.toml files for maximal compatibility
 # with all versions of Cargo and also rewrite `path` dependencies
-# to registry (e.g. crates.io) dependencies
+# to registry (e.g., crates.io) dependencies
 #
 # If you believe there's an error in this file please file an
 # issue against the rust-lang/cargo repository. If you're
@@ -11,11 +11,11 @@
 # will likely look very different (and much more reasonable)
 
 [package]
+edition = "2018"
 name = "textwrap"
-version = "0.11.0"
+version = "0.12.1"
 authors = ["Martin Geisler <martin@geisler.net>"]
-exclude = [".dir-locals.el"]
-description = "Textwrap is a small library for word wrapping, indenting, and\ndedenting strings.\n\nYou can use it to format strings (such as help and error messages) for\ndisplay in commandline applications. It is designed to be efficient\nand handle Unicode characters correctly.\n"
+description = "Textwrap is a library for word wrapping, indenting, and dedenting\nstrings.\n\nYou can use it to format strings (such as help and error messages) for\ndisplay in commandline applications. It is designed to be efficient\nand handle Unicode characters correctly.\n"
 documentation = "https://docs.rs/textwrap/"
 readme = "README.md"
 keywords = ["text", "formatting", "wrap", "typesetting", "hyphenation"]
@@ -25,16 +25,16 @@ repository = "https://github.com/mgeisler/textwrap"
 [package.metadata.docs.rs]
 all-features = true
 [dependencies.hyphenation]
-version = "0.7.1"
-features = ["embed_all"]
+version = "0.8"
+features = ["embed_en-us"]
 optional = true
 
-[dependencies.term_size]
-version = "0.3.0"
+[dependencies.terminal_size]
+version = "0.1"
 optional = true
 
 [dependencies.unicode-width]
-version = "0.1.3"
+version = "0.1"
 [dev-dependencies.lipsum]
 version = "0.6"
 
@@ -45,7 +45,7 @@ version = "0.6"
 version = "0.1"
 
 [dev-dependencies.version-sync]
-version = "0.6"
+version = "0.9"
 [badges.appveyor]
 repository = "mgeisler/textwrap"
 
