--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@
 [package]
 edition = "2018"
 name = "textwrap"
-version = "0.13.4"
+version = "0.14.0"
 authors = ["Martin Geisler <martin@geisler.net>"]
 exclude = [".github/", ".gitignore", "benches/", "examples/", "fuzz/", "images/"]
 description = "Powerful library for word wrapping, indenting, and dedenting strings"
@@ -30,8 +30,13 @@ all-features = true
 name = "linear"
 path = "benches/linear.rs"
 harness = false
+
+[[bench]]
+name = "indent"
+path = "benches/indent.rs"
+harness = false
 [dependencies.hyphenation]
-version = "0.8"
+version = "0.8.2"
 features = ["embed_en-us"]
 optional = true
 
@@ -43,6 +48,10 @@ optional = true
 version = "0.1"
 optional = true
 
+[dependencies.unicode-linebreak]
+version = "0.1"
+optional = true
+
 [dependencies.unicode-width]
 version = "0.1"
 optional = true
@@ -50,7 +59,7 @@ optional = true
 version = "0.3"
 
 [dev-dependencies.lipsum]
-version = "0.7"
+version = "0.8"
 
 [dev-dependencies.unic-emoji-char]
 version = "0.9.0"
@@ -59,6 +68,6 @@ version = "0.9.0"
 version = "0.9"
 
 [features]
-default = ["unicode-width", "smawk"]
+default = ["unicode-linebreak", "unicode-width", "smawk"]
 [target."cfg(unix)".dev-dependencies.termion]
 version = "1.5"
